# vine

./: .gitignore  README.md  index.html  org.bloom.Vine.desktop  org.bloom.Vine.json  org.bloom.Vine.metainfo.xml  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: main.ts  remoteSigner.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/nip46/: codec.ts  encryption.ts  index.ts  keys.ts  service.ts  session.ts  storage.ts  types.ts
src/lib/nip46/transport/: index.ts  requestQueue.ts  simplePoolTransport.ts  types.ts
