[package]
name = "vine-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "io-util"] }
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
aes-gcm = { version = "0.10", features = ["aes"] }
rand = "0.8"
infer = "0.15"
tokio-util = "0.7"
bytes = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-notification = "2.3.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
